grammar.js
		root:               $ => optional(choice(
			$.program,
			$.library,
			$.unit,
			$.package,
			$._definitions // For include files
		)),

		// HIGH LEVEL ----------------------------------------------------------

		unit:               $ => seq(
			$.kUnit, $.moduleName,
			// `unit Spring.Foo deprecated 'Use Spring.Bar instead';` — unit-level
			// deprecation hint (Spring4D pattern in retired units).
			optional(seq($.kDeprecated, optional($._expr))),
			';',
			repeat(choice(
				$.interface,
				$.implementation,
				$.initialization,
				$.finalization,
			)),
			$.kEnd, $.kEndDot
		),

		// Delphi package file (.dpk). Structure:
		//   package <Ident>;
		//   <compiler directives / $I includes>
		//   [requires <pkgList> ;]
		//   [contains <unitList> ;]    -- units may carry  in 'path.pas'
		//   end .
		interface:       $ => seq($.kInterface, optional($._declarations)),
		implementation:  $ => seq($.kImplementation, optional($._definitions)),
		moduleName:      $ => delimited1($.identifier, $.kDot),

		// STATEMENTS ---------------------------------------------------------

		...statements(false),
		...statements(true),

		_expr:           $ => choice(
			$._ref, $.exprBinary, $.exprUnary,
			// Delphi 12+ inline if-then-else expression:
			//   X := if Cond then 1 else 0;
			//   Result := (if Assigned(X) then X.Name else '');
			$.exprIf,
		),

		// Inline if-expression: `if <cond> then <a> else <b>`. Distinct from
		// the if-then-else STATEMENT (rn('ifElse')) — this one returns a value.
		// Right-associative + lower precedence than binary operators so that
		// `a + if c then x else y` groups as `a + (if c then x else y)`.
		_ref:            $ => choice(
			...enable_if(templates && fpc,
				// TODO: Ideally, the kSpecialize should be part of exprTpl,
				// but for some reason this leads to a rule conflict, so for
				// now we just put it here.
				//
				// Also, we have to write the rule in this weird weird way,
				// because if we just do
				//
				//   seq(optional($.kSpecialize), $.identifier)
				//
				// then we can't have a standalone identifier named
				// "specialize". (Bug in tree-sitter?)
				prec.left(choice(
					seq($.kSpecialize, $.identifier),
					seq(alias($.kSpecialize, $.identifier)),
				))
			),
			$.identifier,
			$._literal,  $.inherited, $.exprDot,
			$.exprBrackets, $.exprParens, $.exprSubscript, $.exprCall,
			alias($.exprDeref, $.exprUnary),
			alias($.exprAs, $.exprBinary),
			...enable_if(templates, $.exprTpl),
			...enable_if(lambda, $.lambda)
		),

		type:            $ => pp($,choice(
			$.typeref,
			$.declMetaClass,
			$.declEnum,
			$.declSet,
			$.declArray,
			$.declFile,
			$.declString,
			$.declProcRef,
			// Anonymous record/class/object types in type position. Required for
			// patterns like:
			//   const Errors: array [0..N] of record A: T; B: T; end = (...);
			//   var X: record I: Integer; end;
			$.declClass,
			// IFDEF-as-type: `FStream: {$IFDEF X}System.Classes{$ELSE}Classes{$ENDIF};`
			// (the external scanner produces pp_block as one opaque token at this
			// position; the regex pp / pp_block-in-extras paths still handle the
			// "wraps a whole statement/declaration" case.)
			// prec(-1): only used when no real type follows the pp_block — handles
			// `TRecInfo = {$IFDEF CPUX86}packed{$ENDIF} record...end;` correctly
			// (pp_block becomes extras, real type is `packed record...` after).
			prec(-1, $.pp_block),
			// Qualified type where IFDEF wraps the namespace prefix:
			//   Response: {$IFDEF USE_NAMESPACES}Web.HTTPApp{$ELSE}HTTPApp{$ENDIF}.TWebResponse
			// (EurekaLog / Embarcadero RTL XE2+ unit-scope-name pattern.)
			// Explicit prec(1) so the pp_block is consumed structurally, not as
			// extras whitespace that would orphan the trailing `.TFoo`.
			prec(1, seq($.pp_block, $.kDot, $.typeref)),
		)),

		typeref:         $ => seq(
			...enable_if(fpc, field('_dummy', optional($.kSpecialize))),
			$._typeref,
			...enable_if(delphi, optional(seq($.kDeprecated, $._expr))),
		),

		_typeref:        $ => choice(
			$.identifier, $.typerefDot,
			...enable_if(templates, $.typerefTpl),
			$.typerefPtr,
			// Soft keywords that can also serve as type names. Delphi allows
			// many context-sensitive keywords to be used as identifiers when
			// the surrounding syntax requires one. These come up most often
			// in OleServer / Excel / Word automation wrappers where the OLE
			// IDL was translated mechanically and used clashing names.
			alias($.kReference, $.identifier),
			alias($.kMessage,   $.identifier),
			alias($.kName,      $.identifier),
			alias($.kIndex,     $.identifier),
			alias($.kRead,      $.identifier),
			alias($.kWrite,     $.identifier),
		),

		typerefDot:      $ => op.infix(1,$._typeref, $.kDot, $._typeref),
		_genericName:    $ => choice(
			$.identifier, $.genericDot, ...enable_if(templates, $.genericTpl)
		),
		literalString:   $ => repeat1($._literalString),
		// Delphi 12+ multi-line string (triple-quoted, like Python's """) — must
		// be matched BEFORE the single-quoted form because tree-sitter uses
		// longest-match. The body matches any chars (including newlines and
		// single quotes) up to a closing `'''`.
		_literalString:  $ => choice(
			// Delphi 12+ triple-quoted multi-line string. prec(2) so the
			// regex engine prefers this over the single-quoted form when
			// three quotes start the literal.
			token(prec(2, /'''[\s\S]*?'''/)),
			// Single-quoted string. `''` (doubled single-quote) is Delphi's
			// escape for one literal apostrophe — `'Can''t'` is "Can't".
			// Body alternation: any non-quote char, OR a doubled quote.
			token(/'([^']|'')*'/),
			$.literalChar
		),
		// Char literal: `#NN` decimal/hex char code, OR `^X` control char
		// (the latter handled by the external scanner with proper lookahead
		// to disambiguate from `^TFoo` pointer-to-type).
		literalNumber:   $ => choice($._literalInt, $._literalFloat, $.trailing_dot_float),
		// Delphi 11+ allows `_` as a digit-group separator: `1_000_000_000`
		// or `$FFFF_FFFF`. Underscore is between digits, never leading/trailing.
		_literalInt:     $ => choice(
			token.immediate(/[-+]?[0-9](_?[0-9])*/),
			token.immediate(/\$[a-fA-F0-9](_?[a-fA-F0-9])*/)
		),
		// Float: optional sign, digits with optional decimal portion, optional
		// scientific exponent. Exponent letter is `e` OR `E` (case-insensitive).
		// NOTE: trailing-dot form (`100.`) is intentionally NOT supported here
		// because it conflicts with the `..` range operator (e.g. `array [0..N]`
		// would be lex-greedy-matched as `0.` float + `.N` and break the array).
		_literalFloat:   $ => prec(10, /[-+]?[0-9]*\.?[0-9]+([eE][+-]?[0-9]+)?/),

		_definitions:    $ => repeat1($._definition),
		defProc:         $ => seq(
			/*pp($,*/ field('header', $.declProc)/*)*/,
			pp(
			 	$,
				field('local', optional($._definitions)),
				field('body', choice(tr($, 'block'), tr($, 'asm'))),
				';'
			)
		),

		_declarations:   $ => repeat1(choice(
			$.declTypes, $.declVars, $.declConsts, $.declProc, $.declProp,
			alias($.declProcFwd, $.declProc),
			$.declUses, $.declLabels, $.declExports
		)),
		defaultValue:    $ => seq($.kEq, $._initializer),

		// Declaration sections

		// Permissive uses-clause: accepts the normal `kUses delimited(unit) ;`
		// form AND patterns where `{$IF}/{$ELSE}/{$ENDIF}` directives appear
		// between units OR wrap the entire `units ;` block:
		//   uses
		//     {$IFDEF HAS_UNITSCOPE}
		//     System.SysUtils;
		//     {$ELSE}
		//     SysUtils;
		//     {$ENDIF}
		// We allow units, commas, pp tokens AND `;` to interleave; the rule
		// terminates on the LAST `;` it can consume. Trades grammatical
		// strictness for parsing robustness on real-world JEDI/JCL/Indy code.
		declTypes:       $ => seq(
			$.kType,
			repeat($.declType)
		),

		declVars:        $ => seq(
			optional($.kClass),
			choice($.kVar, $.kThreadvar),
			repeat($.declVar)
		),

		declType:        $ => seq(
			...enable_if(rtti, optional($.rttiAttributes)),
			...enable_if(fpc, optional($.kGeneric)),
			field('name', $._genericName), $.kEq,
			field('type',
				choice(
					seq(optional($.kType), $.type),
					choice($.type),
					$.declClass,
					$.declIntf,
					$.declHelper,
					// Subrange types: `type TJvMargin = 2..24;`, also
					// `type T = Low(Integer)..High(Integer);`
					$.subrangeType,
				)
			),
			';',
			repeat($._procAttribute)
		),

		// Narrow subrange specialization used only as a type-declaration RHS,
		// to avoid the precedence/conflict cascade that `range` (uses _expr)
		// triggers in this position. Accepts numeric literals, negative
		// numbers, simple identifiers, and call-like `Func(arg)` forms which
		// covers Low/High/Ord patterns.
		subrangeType:    $ => seq(
			$._subrangeBound, '..', $._subrangeBound
		),
		_subrangeBound: $ => choice(
			$._literalInt,
			$._literalFloat,
			seq('-', $._literalInt),
			seq('+', $._literalInt),
			$.identifier,
			// Qualified identifier `TFoo.Bar` (DevExpress enum-class subrange:
			//   TdxChartActualToolTipMode = TdxChartToolTipMode.None .. TdxChartToolTipMode.Crosshair;
			// Narrow form: two-level only; full qualified-name uses _ref which
			// conflicts with typerefDot in this position.)
			seq($.identifier, '.', $.identifier),
			seq($.identifier, '(', $.identifier, ')'),
			// `hid - 1`, `MaxN + 2` — narrow `identifier OP integer` form for
			// real-corpus patterns like `TNmbrRange = 0 .. hid - 1;`.
			// Kept narrow (no full _expr) to avoid the conflict cascade hit
			// when wider _expr was tried earlier.
			seq($.identifier, choice('-', '+'), $._literalInt),
			// `#NN` numeric char-literal bound: `TCodeLetter = #64..#82;`.
			// (Excluding `^X` external char_literal — narrower keeps Spring4D
			// safe from the earlier regression.)
			seq('#', $._literalInt),
		),

		declProc:        $ => seq(
			...enable_if(rtti, optional($.rttiAttributes)),
			choice($._declProc, $._declOperator),
		),

		declVar:         $ => seq(
			...enable_if(rtti, optional($.rttiAttributes)),
			// Allow soft-keyword names as variable identifiers. Same set as
			// `_typeref`'s alias list — `Message: TFoo;`, `Name: string;`,
			// `Index: integer;` etc. show up frequently in legacy code.
			field('name', delimited1(choice(
				$.identifier,
				alias($.kMessage,   $.identifier),
				alias($.kName,      $.identifier),
				alias($.kIndex,     $.identifier),
				alias($.kRead,      $.identifier),
				alias($.kWrite,     $.identifier),
				alias($.kReference, $.identifier),
			))),
			':',
			field('type', $.type),
			optional(choice(
				seq($.kAbsolute, $._ref),
				field('defaultValue', $.defaultValue)
			)),
			';',
			repeat(choice($._procAttribute, $.procExternal))
		),

		declString:      $ => prec.left(seq(
			$.kString,
			optional(seq('[', choice($._expr), ']'))
		)),

		declProcRef:     $ => prec.right(1,seq(
			optional(seq($.kReference, $.kTo)),
			choice($.kProcedure, $.kFunction),
			field('args', optional($.declArgs)),
			optional(seq(
				':',
				field('type', $.typeref),
			)),
			optional(seq($.kOf, $.kObject)),
			// Trailing calling convention. Restricted to a narrow keyword list
			// (NOT the full procAttribute, which causes typeref ambiguity)
			// to keep the grammar deterministic.
			optional(choice(
				$.kStdcall, $.kCdecl, $.kSafecall, $.kPascal,
				$.kRegister, $.kWinapi, $.kInline
			))
		)),

		declClass:       $ => seq(
			optional($.kPacked),
			choice(
				$.kClass, $.kRecord, $.kObject,
				...enable_if(objc,
					$.kObjcclass, $.kObjccategory, $.kObjcprotocol
				)
			),
			optional(choice(
				$.kAbstract, $.kSealed,
				...enable_if(objc,
					seq($.kExternal, optional(seq($.kName, $._expr)))
				)
			)),
			field('parent', optional(seq('(',delimited($.typeref),')'))),
			optional($._declClass)
		),

		_declClass:      $ => seq(
			optional($._declFields),
			optional($._classDeclarations),
			repeat($.declSection),
			optional($.declVariant),
			$.kEnd,
			// Whole-type declaration hints AFTER `end`:
			//   type IFoo = interface ... end deprecated;
			//   type IBar = interface ... end deprecated 'use IBaz';
			optional(choice(
				seq($.kDeprecated, optional($._expr)),
				$.kPlatform,
				$.kExperimental,
			))
		),

		declField:       $ =>  seq(
			...enable_if(rtti, optional($.rttiAttributes)),
			field('name', delimited1($.identifier)),
			':',
			field('type', $.type),
			field('defaultValue', optional($.defaultValue)),
			// Declaration hints on record/class fields (Embarcadero RTL):
			//   FMin: Integer deprecated;
			//   FOldField: T platform;
			optional(choice(
				seq($.kDeprecated, optional($._expr)),
				$.kPlatform,
				$.kExperimental
			)),
			';'
		),

		_declProc:       $ => seq(
			...enable_if(fpc, optional($.kGeneric)),
			optional($.kClass),
			choice($.kProcedure, $.kFunction, $.kConstructor, $.kDestructor),
			field('name', $._genericName),
			field('args', optional($.declArgs)),
			optional(seq(
				':',
				field('type', $.typeref),
			)),
			field('assign', optional($.defaultValue)),
			// Inline calling-convention or procAttribute BEFORE the terminating
			// ';' — Embarcadero RTL / AzureAPI use lenient forms:
			//   function DbiInitFn(...): DBIResult stdcall;   (iter 56)
			//   procedure PreflightBlobRequest(...) overload; (iter 60)
			// `repeat` allows multiple chained attributes like `... cdecl overload`.
			repeat(choice(
				$.kStdcall, $.kCdecl, $.kSafecall, $.kPascal,
				$.kRegister, $.kWinapi, $.kInline,
				$.kOverload, $.kVirtual, $.kAbstract, $.kOverride,
				$.kReintroduce, $.kStatic, $.kDynamic, $.kFinal
			)),
			';',
			repeat($._procAttributeNoExt)
		),

		_declOperator:   $ => seq(
			optional($.kClass),
			$.kOperator,
			field('name', $._operatorName),
			field('args', optional($.declArgs)),
			...enable_if(fpc, field('resultName', optional($.identifier))),
			// Return type is omitted for procedure-style class operators on
			// managed records: Initialize, Finalize, Assign.
			optional(seq(
				':',
				field('type', $.type),
				field('assign', optional($.defaultValue))
			)),
			';',
			repeat($._procAttributeNoExt)
		),

		declArgs:        $ => seq('(', delimited($.declArg, ';'), ')'),

		declArg:         $ => choice(
			seq(
				choice($.kVar, $.kConst, $.kOut, $.kConstref),
				// Inline attribute between modifier and name:
				//   `const [ref] X: T` — pass-by-reference const (Delphi 10+).
				//   Generally any bracketed attribute is allowed here.
				optional($.rttiAttributes),
				field('name', delimited1($.identifier)),
				optional(seq(
					':', field('type', $.type),
					field('defaultValue', optional($.defaultValue))
				))
			),
			seq(
				field('name', delimited1($.identifier)), ':',
				field('type', $.type),
				field('defaultValue', optional($.defaultValue))
			)
		),

		// Attributes & declaration hints

		_procAttribute:  $ => /*pp($,*/choice(
			seq(field('attribute', $.procAttribute), ';'),
			// FPC-specific syntax, e.g. procedure myproc; [public; alias:'bla'; cdecl];
			...enable_if(fpc, seq(
				'[',
				delimited(field('attribute', choice($.procAttribute, $.procExternal))),
				']', ';'
			))
		)/*)*/,
		rttiAttributes:  $ => repeat1(seq(
			// Note: "Identifier:" is for tagging parameters of procedures (Delphi)
			'[', optional(seq($.identifier, ':')), delimited($._ref), ']'
		)),

		_initializer:    $ => prec(2,seq(
			choice($._expr, $.recInitializer, $.arrInitializer)
		)),

		// record initializer
		kUnit:             $ => /unit/i,
		kInterface:        $ => /interface/i,
		kImplementation:   $ => /implementation/i,
		kEndDot:           $ => '.',

		kBegin:            $ => /begin/i,
		kEnd:              $ => /end/i,
		kVar:              $ => /var/i,
		kConst:            $ => /const/i,
		kType:             $ => /type/i,
		kInterface:        $ => /interface/i,
		kRecord:           $ => /record/i,
		kString:           $ => /string/i,
		kDot:              $ => '.',
